<resources>
    <string name="app_name">MotivodoroApp</string>
    <string name="home">home</string>
    <string name="records">records</string>
    <string name="statistics">statistics</string>
    <string name="quotes">quotes</string>
    <string name="your_projects">Projects</string>
    <string name="time">Time:</string>
    <string name="pause">Pause:</string>
    <string name="pause_stopwatch">Pause</string>
    <string name="resume_stopwatch">Resume</string>
    <string name="x">x</string>
    <string name="save_text">save changes</string>
    <string name="start_timer_text">Start Timer</string>
    <string name="rounds_left">Rounds left: </string>
    <string name="first_quote">Infuse your life with action. Don\'t wait for it to happen. Make it happen. Make your own future. Make your own hope. Make your own love. And whatever your beliefs, honor your creator, not by passively waiting for grace to come down from upon high, but by doing what you can to make grace happen… yourself, right now, right down here on Earth. Bradley Whitford </string>
    <string name="first_quote_al">Infuse your life with action. Don\'t wait for it to happen. Make it happen. Make your own future. Make your own hope. Make your own love. And whatever your beliefs, honor your creator, not by passively waiting for grace to come down from upon high, but by doing what you can to make grace happen… yourself, right now, right down here on Earth. Bradley WhitfordMake it happen. Make your own future. Make your own hope. Make your own love. And whatever your beliefs, honor your creator, not by passively waiting for grace to come down from upon high, but by doing what you can to make grace happen… yourself, right now, right down here on Earth. Bradley Whitford  </string>
    <string name="second_quote">Setting goals is the first step in turning the invisible into the visible. Tony Robbins</string>
    <string name="author_name">Tony Robbins</string>
    <string name="quote_favorite_image_button_text">tap to add quote to favorites</string>
    <string name="turn_on_countdown_timer_text">turn countdown timer on</string>
    <string name="stop_countdown_timer_text">stop countdown timer</string>
    <string name="pause_countdown_timer_text">pause countdown timer</string>
    <string name="_3_text">3</string>
    <string name="add_new_project_text">Add new project</string>
    <string name="create_new_project_text">Create new project</string>
    <string name="enter_project_name_text">Enter project name: </string>
    <string name="random_text">Random</string>
    <string name="next_text">Next</string>
    <string name="start_countdown_timer_text">start countdown timer</string>
    <string name="project_name_text">project name</string>
    <string name="unlocked_and_total_quotes">%1$s/%2$s</string>
    <string name="minus">-</string>
</resources>