<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.stopwatch.StopWatchFragment">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/quote_card_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/primaryColor"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/favorited_image_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end|bottom"
            android:background="@drawable/ic_baseline_favorite_24"
            android:backgroundTint="@drawable/favorite_selector"
            android:clickable="true"
            android:contentDescription="@string/quote_favorite_image_button_text"
            android:focusable="true"
            android:elevation="3dp"
            android:hapticFeedbackEnabled="true" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/primaryColor"

            android:orientation="vertical"

            android:padding="10dp">

            <TextView
                android:id="@+id/quote_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/life_savers"
                android:text="@string/first_quote"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/quote_author_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lemonada_semibold"
                android:text="@string/author_name"
                android:textSize="24sp" />


        </LinearLayout>
        </ScrollView>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/stopwatch_text_view"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="@id/quote_card_view"
        app:layout_constraintStart_toStartOf="@id/quote_card_view"
        app:layout_constraintTop_toBottomOf="@id/quote_card_view" />



    <ImageButton
        android:id="@+id/pause_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_200"
        android:contentDescription="@string/pause_countdown_timer_text"
        android:minHeight="48dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_baseline_pause_24"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/play_image_button"
        app:layout_constraintStart_toEndOf="@+id/play_image_button"
        app:layout_constraintTop_toTopOf="@+id/play_image_button" />

    <ImageButton
        android:id="@+id/play_image_button"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:backgroundTint="@color/teal_200"
        android:contentDescription="@string/turn_on_countdown_timer_text"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_play_arrow_24"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/stopwatch_text_view"
        app:layout_constraintStart_toStartOf="@+id/stopwatch_text_view"
        app:layout_constraintTop_toBottomOf="@+id/stopwatch_text_view"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <ImageButton
        android:id="@+id/stop_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/teal_200"
        android:contentDescription="@string/stop_countdown_timer_text"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_stop_24"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/play_image_button"
        app:layout_constraintEnd_toStartOf="@+id/play_image_button"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <TextView
        android:id="@+id/project_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>